--- a/YumYum/build.gradle
+++ b/YumYum/build.gradle
@@ -42,7 +42,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	//JWT
-	implementation 'com.auth0:java-jwt:3.19.2'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
 	//Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
