--- a/YumYum/build.gradle
+++ b/YumYum/build.gradle
@@ -29,7 +29,10 @@ repositories {
 }
 
 dependencies {
-	//DB
+	// AWS
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// DB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	runtimeOnly 'mysql:mysql-connector-java' //mysql8
@@ -38,7 +41,7 @@ dependencies {
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
-	//Security, Authentication
+	// Security, Authentication
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	//JWT
@@ -46,13 +49,13 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
-	//Web
+	// Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	//Validation
+	// Validation
 	implementation("org.springframework.boot:spring-boot-starter-validation")
 
-	//lombok
+	// lombok
 	compileOnly 'org.projectlombok:lombok'
 
 	annotationProcessor 'org.projectlombok:lombok'
