--- a/YumYum/build.gradle
+++ b/YumYum/build.gradle
@@ -44,10 +44,13 @@ dependencies {
 	// Security, Authentication
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	//JWT
+	// JWT
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
+	// OAUTH 2.0
+	implementation 'org.springframework.security:spring-security-oauth2-client'
 
 	// Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
