--- a/YumYum/build.gradle
+++ b/YumYum/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
 	// OAUTH 2.0
-	implementation 'org.springframework.security:spring-security-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 	// Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
